# teach_service_test_task

./: .gitignore  pyproject.toml
environment/: .env.example
server/: asgi.py  db.sqlite3  urls.py  wsgi.py
server/apps/courses/: apps.py  models.py  urls.py  views.py
server/apps/courses/migrations/: 0001_initial.py  0002_productpurchase_learningsession.py  0003_alter_lessonlearning_watched_sec.py  0004_productpurchase_buyer.py
server/apps/courses/services/: all_products_statistic.py  product_lessons.py  products_lessons.py
server/settings/: __init__.py  base.py  dev.py
